--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* .xyz{
+  position: absolute;
+} */
+
+/* @import "tailwindcss/base";
+
+@import "tailwindcss/componets";
+
+@import "tailwindcss/utilities" */
+
